Update to toy tutorial .ipynb

--- a/tutorials/toy/tutorial.ipynb
+++ b/tutorials/toy/tutorial.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "# Toy Correlation Tutorial\n",
     "\n",
-    "In this notebook, we explore how different correlation assumptions affect a simple two-measurement combination. Both measurements estimate the same quantity, with central values \\( y_1 = 1.5 \\) and \\( y_2 = -1.5 \\). Their statistical uncertainties are \\( \\sigma_{y_1} = \\sigma_{y_2} = 1 \\). We introduce a single systematic source with magnitudes \\( \\Gamma_1 = 0.5 \\) and \\( \\Gamma_2 = 1 \\), so that the first measurement has a smaller total uncertainty.\n",
+    "In this notebook, we demonstrate how to use the toolkit to implement errors-on-error in a combination scenario, under different correlation assumptions.\n",
     "\n",
-    "In the first part of the tutorial, all error-on-error terms (\\( \\varepsilon \\)) are set to zero, so that only correlations influence the result. In the second part, we show how to introduce and account for errors-on-errors.\n",
+    "In the first part of this tutorial, we focus on a simple combination of two measurements. Both measurements estimate the same physical quantity, with central values \\( y_1 = 1.5 \\) and \\( y_2 = -1.5 \\), and statistical uncertainties \\( \\sigma_{y_1} = \\sigma_{y_2} = 1 \\). We introduce a single systematic source with magnitudes \\( \\Gamma_1 = 0.5 \\) and \\( \\Gamma_2 = 1 \\), such that the first measurement carries a smaller total uncertainty.\n",
     "\n",
-    "For systematic uncertainties without an associated error-on-the-error, the log-likelihood is constructed using the BLUE approach, as described in Sec.\u202f2 of [arXiv:2407.05322](https://arxiv.org/abs/2407.05322). \n"
+    "We begin by setting all error-on-error terms to zero, so that only the correlation structure influences the result. We then show how to introduce and incorporate the effect of errors-on-error in the combination."
    ]
   },
   {
@@ -45,68 +45,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d8a7718",
+   "id": "3be21581",
    "metadata": {},
    "source": [
-    "The following cells build a `GVMCombination` for each correlation scenario. After running the fit we print the estimated mean (`mu_hat`), the 68% confidence interval and the goodness-of-fit (chi-square) value.\n"
+    "## 1. Systematic correlation examples\n",
+    "\n",
+    "We now compare three different correlation matrices for the systematic uncertainty:\n",
+    "1. **Diagonal**: off-diagonal terms are zero so the systematic acts independently.\n",
+    "2. **Hybrid**: the off-diagonal coefficient is 0.75 representing a partial correlation.\n",
+    "3. **Fully correlated**: all coefficients are one so the systematic behaves as one shared nuisance parameter.\n",
+    "\n",
+    "In the configuration file, errors-on-error are explicitly set to zero, and their type is set to *dependent*. In principle, one could omit both the error-on-error value and its type, since the defaults are zero and *dependent*, respectively. Note that the systematic type is irrelevant when the error-on-error is zero."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "de975f36",
+   "id": "2ed51eac",
    "metadata": {},
    "source": [
-    "## 1. Decorrelated case\n",
-    "Here the systematic uncertainty is defined as independent for each measurement (no correlation matrix)."
+    "The following cells build a `GVMCombination` for each correlation scenario. After running the fit we print the estimated mean (`mu_hat`), the 68% confidence interval and the goodness-of-fit (chi-square) value."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "463e328f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Decorrelated\n",
-      "mu_hat = 0.3462, CI = (-0.5332, 1.2230)\n",
-      "\u03c7\u00b2 = 2.769, significance = 1.6641005886756863\n"
-     ]
-    }
-   ],
-   "source": [
-    "comb = GVMCombination('input_files/decorrelated.yaml')\n",
-    "\n",
-    "mu_hat = comb.fit_results['mu']\n",
-    "ci_low, ci_high, _ = comb.confidence_interval()\n",
-    "\n",
-    "chi_2 = comb.goodness_of_fit()\n",
-    "p_value = 1 - chi2.cdf(chi_2, df=1)\n",
-    "significance = norm.ppf(1 - p_value/2)\n",
-    "\n",
-    "print('Decorrelated')\n",
-    "print(f'mu_hat = {mu_hat:.4f}, CI = ({ci_low:.4f}, {ci_high:.4f})')\n",
-    "print(f'\u03c7\u00b2 = {chi_2:.3f}, significance = {significance}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3be21581",
-   "metadata": {},
-   "source": [
-    "## 2. Correlation examples\n",
-    "\n",
-    "We now compare three different correlation matrices for the systematic uncertainty:\n",
-    "1. **Diagonal**: off-diagonal terms are zero so the systematic acts independently.\n",
-    "2. **Hybrid**: the off-diagonal coefficient is 0.75 representing a partial correlation.\n",
-    "3. **Fully correlated**: all coefficients are one so the systematic behaves as one shared nuisance parameter.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
    "id": "fce66e15",
    "metadata": {},
    "outputs": [
@@ -116,15 +78,15 @@
      "text": [
       "Diagonal\n",
       "mu_hat = 0.3462, CI = (-0.5332, 1.2230)\n",
-      "\u03c7\u00b2 = 2.769, significance = 1.6641005886756863 \n",
+      "χ² = 2.769, significance = 1.6641005886756863 \n",
       "\n",
       "Hybrid correlation\n",
       "mu_hat = 0.4500, CI = (-0.5288, 1.4212)\n",
-      "\u03c7\u00b2 = 3.600, significance = 1.8973665961010266 \n",
+      "χ² = 3.600, significance = 1.8973665961010266 \n",
       "\n",
       "Fully correlated\n",
       "mu_hat = 0.5000, CI = (-0.5000, 1.5003)\n",
-      "\u03c7\u00b2 = 4.000, significance = 1.999999999999998\n"
+      "χ² = 4.000, significance = 1.999999999999998\n"
      ]
     }
    ],
@@ -137,7 +99,7 @@
     "significance = norm.ppf(1 - p_value/2)\n",
     "print('Diagonal')\n",
     "print(f'mu_hat = {mu_hat:.4f}, CI = ({ci_low:.4f}, {ci_high:.4f})')\n",
-    "print(f'\u03c7\u00b2 = {chi_2:.3f}, significance = {significance} \\n')\n",
+    "print(f'χ² = {chi_2:.3f}, significance = {significance} \\n')\n",
     "\n",
     "comb = GVMCombination('input_files/hybrid_corr.yaml')\n",
     "mu_hat = comb.fit_results['mu']\n",
@@ -147,7 +109,7 @@
     "significance = norm.ppf(1 - p_value/2)\n",
     "print('Hybrid correlation')\n",
     "print(f'mu_hat = {mu_hat:.4f}, CI = ({ci_low:.4f}, {ci_high:.4f})')\n",
-    "print(f'\u03c7\u00b2 = {chi_2:.3f}, significance = {significance} \\n')\n",
+    "print(f'χ² = {chi_2:.3f}, significance = {significance} \\n')\n",
     "\n",
     "comb = GVMCombination('input_files/full_corr.yaml')\n",
     "mu_hat = comb.fit_results['mu']\n",
@@ -157,7 +119,7 @@
     "significance = norm.ppf(1 - p_value/2)\n",
     "print('Fully correlated')\n",
     "print(f'mu_hat = {mu_hat:.4f}, CI = ({ci_low:.4f}, {ci_high:.4f})')\n",
-    "print(f'\u03c7\u00b2 = {chi_2:.3f}, significance = {significance}')\n"
+    "print(f'χ² = {chi_2:.3f}, significance = {significance}')"
    ]
   },
   {
@@ -165,15 +127,15 @@
    "id": "e213bdf5",
    "metadata": {},
    "source": [
-    "## 3. Non-diagonal statistical covariance\n",
+    "## 2. Non-diagonal statistical covariance\n",
     "The same systematic is fully correlated as above, but this time the statistical uncertainties are specified via a covariance matrix that includes non-zero off-diagonal terms.\n",
     "\n",
-    "Unlike systematic uncertainties \u2014 which can be described through correlation matrices \u2014 statistical uncertainties must be provided directly as a **covariance matrix**."
+    "Unlike systematic uncertainties — which can be described through correlation matrices — statistical uncertainties must be provided directly as a **covariance matrix**."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "id": "aebc5e9e",
    "metadata": {},
    "outputs": [
@@ -182,7 +144,7 @@
      "output_type": "stream",
      "text": [
       "mu_hat = 0.5000, CI = (-0.9187, 1.9138)\n",
-      "\u03c7\u00b2 = 4.000, significance = 1.999999999999998\n"
+      "χ² = 4.000, significance = 1.999999999999998\n"
      ]
     }
    ],
@@ -194,7 +156,7 @@
     "p_value = 1 - chi2.cdf(chi_2, df=1)\n",
     "significance = norm.ppf(1 - p_value/2)\n",
     "print(f'mu_hat = {mu_hat:.4f}, CI = ({ci_low:.4f}, {ci_high:.4f})')\n",
-    "print(f'\u03c7\u00b2 = {chi_2:.3f}, significance = {significance}')\n"
+    "print(f'χ² = {chi_2:.3f}, significance = {significance}')\n"
    ]
   },
   {
@@ -202,14 +164,14 @@
    "id": "9e009afb",
    "metadata": {},
    "source": [
-    "## Tip: modifying the combination\n",
+    "## 3. Tip: modifying the combination\n",
     "You can obtain the current input with `input_data()` and modify the returned dictionary. \n",
     "After editing, pass it to `update_data()` to apply the changes before refitting.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "id": "14e3d3c8",
    "metadata": {},
    "outputs": [
@@ -222,7 +184,7 @@
     }
    ],
    "source": [
-    "comb = GVMCombination('input_files/decorrelated.yaml')\n",
+    "comb = GVMCombination('input_files/diag_corr.yaml')\n",
     "\n",
     "# extract current configuration\n",
     "info = comb.input_data()\n",
@@ -248,13 +210,13 @@
    "source": [
     "# Effect of error-on-error\n",
     "\n",
-    "We now vary the error-on-error parameter ($\\varepsilon$) from 0 to 0.6, to show how the combination results depend on its value. When errors-on-errors are different from zero, the distinction between *decorrelated* and *diagonal correlation matrix* becomes clearer.\n",
+    "We now vary the error-on-error parameter ($\\varepsilon$) from 0 to 0.6 to illustrate how the combination results depend on its value. When errors-on-error are nonzero, the distinction between *independent* and *dependent* systematics becomes relevant and affects the outcome of the combination.\n",
     "\n",
-    "* When a systematic effect is **decorrelated**, the correlation matrix of the corresponding nuisance parameters is diagonal, and the estimates of the systematic uncertainties for the two measurements are statistically independent. This means that the systematic uncertainty for measurement *m1* could be overestimated while *m2* is underestimated, or vice versa \u2014 both estimates can fluctuate independently.\n",
+    "- When a systematic effect is **independent**, the estimates of the systematic uncertainties for the measurements in the combination are statistically independent. This means that the systematic uncertainty for measurement *m1* could be overestimated while *m2* is underestimated, or vice versa — both estimates can fluctuate independently. This also implies that the correlation matrix of the corresponding nuisance parameters must be diagonal. If a non-diagonal correlation matrix is provided, the toolkit will raise an error.\n",
     "\n",
-    "* When a systematic effect is **dependent** but described by a **diagonal correlation matrix**, the nuisance parameters are uncorrelated, but the estimates of the systematic uncertainties are dependent. In this case, if one estimate is overestimated, the other must be as well, and vice versa. This situation may arise, for example, when uncorrelated systematic effects are estimated using similar techniques. A typical LHC example is a two-point systematic derived from comparing HERWIG and PYTHIA.\n",
+    "- When a systematic effect is **dependent**, the estimates of the systematic uncertainties are statistically dependent. In this case, if one estimate is overestimated, the other must be as well, and vice versa. This situation may arise, for example, when uncorrelated systematic effects are estimated using similar techniques. A typical LHC example is a two-point systematic derived from comparing HERWIG and PYTHIA. When the **dependent** type is used, an arbitrary correlation matrix can be provided for the given systematic.\n",
     "\n",
-    "More details on how to implement errors-on-errors in combinations can be found in Sec.\u00a03 of [arXiv:2407.05322](https://arxiv.org/abs/2407.05322), with a more in-depth explanation of dependent vs. independent assumptions in Sec.\u00a03.2."
+    "More details on how to implement errors-on-errors in combinations can be found in Sec. 3 of [arXiv:2407.05322](https://arxiv.org/abs/2407.05322), with a more in-depth explanation of dependent vs. independent assumptions in Sec. 3.2."
    ]
   },
   {
@@ -262,7 +224,7 @@
    "id": "9f3bd7c0",
    "metadata": {},
    "source": [
-    "## 1. Decorrelated\n",
+    "## 1. Independent systematic\n",
     " "
    ]
   },
@@ -272,26 +234,28 @@
    "metadata": {},
    "source": [
     "### Compatible Measurements\n",
-    "\n",
-    "Here, we reinitialize the combination using the configuration file `decorrelated.yaml` as a starting point. In the first example, we examine how the results change when the input measurements are compatible."
+    "Here, we reinitialize the combination using the configuration file `diag_corr.yaml` as a starting point. In the first example, we examine how the results change when the input measurements are compatible. The systematic type must be changed to *independent*, since the configuration file sets it to *dependent*."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "id": "75da59e8",
    "metadata": {},
    "outputs": [],
    "source": [
     "eps_grid = np.linspace(0., 0.6, 14)\n",
-    "comb = GVMCombination('input_files/decorrelated.yaml')\n",
+    "comb = GVMCombination('input_files/diag_corr.yaml')\n",
     "\n",
     "base_info = comb.input_data()\n",
-    "cv = []\n",
     "\n",
     "y_1 = base_info['data']['measurements']['m1']['central']\n",
     "y_2 = base_info['data']['measurements']['m2']['central']\n",
+    "base_info['syst']['sys1']['error-on-error']['type'] = 'independent'\n",
     "\n",
+    "comb.update_data(base_info)\n",
+    "\n",
+    "cv = []\n",
     "lower_bound = []\n",
     "upper_bound = []\n",
     "ci = []\n",
@@ -315,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "id": "7bfd803a",
    "metadata": {},
    "outputs": [
@@ -364,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "id": "a4d68f6c",
    "metadata": {},
    "outputs": [
@@ -401,9 +365,9 @@
    "source": [
     "In general, when the input measurements are compatible, the results are only slightly affected by errors-on-errors. Specifically:\n",
     "\n",
-    "1. The **confidence interval** slightly widens as \\( \\varepsilon \\) increases. Furthermore, the growth occurs more prominently toward the more precise of the two measurements, \"m1\".\n",
+    "1. The **confidence interval** slightly widens as $\\varepsilon$ increases. Furthermore, the growth occurs more prominently toward the more precise of the two measurements, \"m1\".\n",
     "\n",
-    "2. The **goodness-of-fit** slightly decreases with increasing \\( \\varepsilon \\)."
+    "2. The **goodness-of-fit** slightly decreases with increasing $\\varepsilon$."
    ]
   },
   {
@@ -418,13 +382,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "id": "405446fd",
    "metadata": {},
    "outputs": [],
    "source": [
     "eps_grid = np.linspace(0., 0.6, 14)\n",
-    "comb = GVMCombination('input_files/decorrelated.yaml')\n",
+    "comb = GVMCombination('input_files/diag_corr.yaml')\n",
     "\n",
     "base_info = comb.input_data()\n",
     "cv = []\n",
@@ -433,6 +397,8 @@
     "y_2 = -2.5\n",
     "base_info['data']['measurements']['m1']['central'] = y_1\n",
     "base_info['data']['measurements']['m2']['central'] = y_2\n",
+    "base_info['syst']['sys1']['error-on-error']['type'] = 'independent'\n",
+    "\n",
     "comb.update_data(base_info)\n",
     "\n",
     "lower_bound = []\n",
@@ -458,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "id": "a59ddf68",
    "metadata": {},
    "outputs": [
@@ -507,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "id": "f59eff03",
    "metadata": {},
    "outputs": [
@@ -556,14 +522,14 @@
    "id": "545afcea",
    "metadata": {},
    "source": [
-    "## 2. Diagonal correlation\n",
+    "## 2. Dependent systematic\n",
     "\n",
     "Here, we focus exclusively on the case where the input measurements are in mutual tension. In the case of compatible measurements, errors-on-errors would once again have little to no effect."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "id": "6b611191",
    "metadata": {},
    "outputs": [],
@@ -603,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "id": "90226b32",
    "metadata": {},
    "outputs": [
@@ -652,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 15,
    "id": "ceafe709",
    "metadata": {},
    "outputs": [
@@ -702,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 16,
    "id": "4ad23975",
    "metadata": {},
    "outputs": [],
@@ -742,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 17,
    "id": "42822643",
    "metadata": {},
    "outputs": [
@@ -799,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 18,
    "id": "95e4f39c",
    "metadata": {},
    "outputs": [],
@@ -839,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 19,
    "id": "1ef3810d",
    "metadata": {},
    "outputs": [
@@ -897,13 +863,21 @@
     "\n",
     "Furthermore, in more realistic combinations involving additional measurements and multiple systematic uncertainties, such pathological behaviours are expected to be less common, as demonstrated in the top-mass tutorial.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d65d9821",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:errors-on-errors]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-errors-on-errors-py"
   },
   "language_info": {
    "codemirror_mode": {
