Add test script for top mass tutorial

--- a/tutorials/top-mass/top-mass-combination.ipynb
+++ b/tutorials/top-mass/top-mass-combination.ipynb
@@ -62,8 +62,7 @@
    "source": [
     "comb           = GVMCombination('input_files/LHC_comb.yaml')\n",
     "mu_hat         = comb.fit_results['mu']\n",
-    "ci_low, ci_high, _ = comb.confidence_interval()\n",
-    "ci_half        = (ci_high - ci_low) / 2\n",
+    "ci_low, ci_high, ci_half = comb.confidence_interval()\n",
     "chi2           = comb.goodness_of_fit()\n",
     "ndof           = comb.n_meas - 1\n",
     "\n",
@@ -113,9 +112,9 @@
     "for syst in systematics:\n",
     "    info = comb.input_data()\n",
     "    for k in info['syst']:\n",
-    "        info['syst'][k]['epsilon'] = 0.0\n",
+    "        info['syst'][k]['error-on-error']['value'] = 0.0\n",
     "    for eps in eps_grid:\n",
-    "        info['syst'][syst]['epsilon'] = eps\n",
+    "        info['syst'][syst]['error-on-error']['value'] = eps\n",
     "        comb.update_data(info)\n",
     "        cv[syst].append(comb.fit_results['mu'])\n",
     "        ci[syst].append(comb.confidence_interval()[2])"
