Add fictitious measurement studies to top-mass tutorial

--- a/tutorials/top-mass/top-mass-combination.ipynb
+++ b/tutorials/top-mass/top-mass-combination.ipynb
@@ -191,12 +191,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "911bad33",
+   "metadata": {},
+   "source": [
+    "## Combination with fictitious measurement"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d10e700",
+   "id": "5762fec7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "comb_fict = GVMCombination('input_files/LHC_comb_fictitious_meas.yaml')\n",
+    "mu_hat = comb_fict.fit_results['mu']\n",
+    "ci_low, ci_high, ci_half = comb_fict.confidence_interval()\n",
+    "chi2 = comb_fict.goodness_of_fit()\n",
+    "ndof = comb_fict.n_meas - 1\n",
+    "\n",
+    "latex_str = rf\"\"\"\n",
+    "\\[\n",
+    "  {{\\large\\textbf{{BLUE result}}}}\\\\[8pt]\n",
+    "  \\boxed{{\\quad\n",
+    "    \\begin{{aligned}}\n",
+    "      \\mathrm{{central\\ value}}\\,(m_t):\\ &{mu_hat:.3f}\\\\[6pt]\n",
+    "      \\mathrm{{confidence\\ interval}}:\\ &\\pm{ci_half:.3f}\\\\[6pt]\n",
+    "      \\chi^2/\\mathrm{{NDOF}}:\\ &{chi2:.2f}/{ndof}\n",
+    "    \\end{{aligned}}\n",
+    "  \\quad}}\n",
+    "\\]\n",
+    "\"\"\"\n",
+    "\n",
+    "display(Latex(latex_str))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b23cd53d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "systematics = ['LHCbJES', 'btag', 'ME', 'LHCJES1', 'LHCJES2', 'method', 'CMSbHad', 'LHCrad']\n",
+    "eps_grid = np.linspace(0., 0.6, 7)\n",
+    "\n",
+    "base_mu = comb_fict.fit_results['mu']\n",
+    "base_ci = comb_fict.confidence_interval()[2]\n",
+    "\n",
+    "cv_fict = {s: [] for s in systematics}\n",
+    "ci_fict = {s: [] for s in systematics}\n",
+    "\n",
+    "for syst in systematics:\n",
+    "    info = comb_fict.input_data()\n",
+    "    for k in info['syst']:\n",
+    "        info['syst'][k]['error-on-error']['value'] = 0.0\n",
+    "    for eps in eps_grid:\n",
+    "        info['syst'][syst]['error-on-error']['value'] = eps\n",
+    "        comb_fict.update_data(info)\n",
+    "        cv_fict[syst].append(comb_fict.fit_results['mu'])\n",
+    "        ci_fict[syst].append(comb_fict.confidence_interval()[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4235e07c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(11,7))\n",
+    "for syst, vals in cv_fict.items():\n",
+    "    plt.plot(eps_grid, vals, marker='o', label=syst)\n",
+    "plt.ylabel('Central value (GeV)')\n",
+    "plt.xlabel('Error on error')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de7bf77d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(11,7))\n",
+    "for syst, vals in ci_fict.items():\n",
+    "    plt.plot(eps_grid, vals, marker='o', label=syst)\n",
+    "plt.ylabel('Uncertainty (GeV)')\n",
+    "plt.xlabel('Error on error')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
