top-totorial plots updated

--- a/tutorials/top-mass/top-mass-combination.ipynb
+++ b/tutorials/top-mass/top-mass-combination.ipynb
@@ -200,10 +200,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "5762fec7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\n",
+       "\\[\n",
+       "  {\\large\\textbf{BLUE result}}\\\\[8pt]\n",
+       "  \\boxed{\\quad\n",
+       "    \\begin{aligned}\n",
+       "      \\mathrm{central\\ value}\\,(m_t):\\ &172.929\\\\[6pt]\n",
+       "      \\mathrm{confidence\\ interval}:\\ &\\pm0.296\\\\[6pt]\n",
+       "      \\chi^2/\\mathrm{NDOF}:\\ &15.18/15\n",
+       "    \\end{aligned}\n",
+       "  \\quad}\n",
+       "\\]\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Latex object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "comb_fict = GVMCombination('input_files/LHC_comb_fictitious_meas.yaml')\n",
     "mu_hat = comb_fict.fit_results['mu']\n",
@@ -234,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "systematics = ['LHCbJES', 'btag', 'ME', 'LHCJES1', 'LHCJES2', 'method', 'CMSbHad', 'LHCrad']\n",
+    "systematics = ['NEW', 'LHCbJES', 'btag', 'ME', 'LHCJES1', 'LHCJES2', 'method', 'CMSbHad', 'LHCrad']\n",
     "eps_grid = np.linspace(0., 0.6, 7)\n",
     "\n",
     "base_mu = comb_fict.fit_results['mu']\n",
@@ -262,11 +285,17 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(11,7))\n",
-    "for syst, vals in cv_fict.items():\n",
-    "    plt.plot(eps_grid, vals, marker='o', label=syst)\n",
-    "plt.ylabel('Central value (GeV)')\n",
-    "plt.xlabel('Error on error')\n",
-    "plt.legend()\n",
+    "for s in systematics:\n",
+    "    plt.plot(eps_grid, cv_fict[s], '--o', label=s)\n",
+    "plt.axhline(base_mu, color='black', linestyle='dashdot', label='Original Combination')\n",
+    "plt.xlabel(r'$\\epsilon_s$', fontsize=24)\n",
+    "plt.ylabel('Central Value $m_t$ (GeV)', fontsize=20)\n",
+    "plt.xlim(0.0, 0.6)\n",
+    "plt.ylim(172.4, 173.9)\n",
+    "plt.legend(fontsize=15)\n",
+    "plt.grid(True)\n",
+    "plt.tick_params(axis='both', which='major', labelsize=16)\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -278,11 +307,17 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(11,7))\n",
-    "for syst, vals in ci_fict.items():\n",
-    "    plt.plot(eps_grid, vals, marker='o', label=syst)\n",
-    "plt.ylabel('Uncertainty (GeV)')\n",
-    "plt.xlabel('Error on error')\n",
-    "plt.legend()\n",
+    "for s in systematics:\n",
+    "    plt.plot(eps_grid, ci_fict[s], '--o', label=s)\n",
+    "plt.axhline(base_ci, color='black', linestyle='dashdot', label='Original Combination')\n",
+    "plt.xlabel(r'$\\epsilon_s$', fontsize=24)\n",
+    "plt.ylabel('$68.3\\%$ Half-Size Confidence Interval (GeV)', fontsize=20)\n",
+    "plt.xlim(0.0, 0.6)\n",
+    "plt.ylim(0., 0.5)\n",
+    "plt.legend(fontsize=15, loc='lower left')\n",
+    "plt.grid(True)\n",
+    "plt.tick_params(axis='both', which='major', labelsize=16)\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   }
