Updated tutorial to new init

--- a/tutorials/top-mass/top-mass-combination.ipynb
+++ b/tutorials/top-mass/top-mass-combination.ipynb
@@ -32,7 +32,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/enzocanonero/Documents/PhD/tesi-codice/errors-on-errors/top-combination/code3.0/gvm_toolkit.py:222: UserWarning: Correlation matrix \"ptmiss\" asymmetric for measurements e and f: 0.36 vs 0.86\n",
+      "/Users/enzocanonero/Documents/PhD/tesi-codice/errors-on-errors/top-combination/code3.0/gvm_toolkit.py:261: UserWarning: Correlation matrix \"ptmiss\" asymmetric for measurements e and f: 0.36 vs 0.86\n",
       "  warnings.warn(\n"
      ]
     },
@@ -60,7 +60,8 @@
     }
    ],
    "source": [
-    "comb           = GVMCombination('input_files/LHC_comb.yaml')\n",
+    "comb           = GVMCombination.from_yaml('input_files/LHC_comb.yaml')\n",
+    "comb.fit()\n",
     "mu_hat         = comb.fit_results['mu']\n",
     "ci_low, ci_high, ci_half = comb.confidence_interval()\n",
     "chi2           = comb.goodness_of_fit()\n",
@@ -92,9 +93,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/enzocanonero/Documents/PhD/tesi-codice/errors-on-errors/top-combination/code3.0/gvm_toolkit.py:276: UserWarning: Negative eigenvalue -4.8319e-01 in systematic \"btag\"; adding 4.9319e-01 to diagonal for regularisation.\n",
+      "/Users/enzocanonero/Documents/PhD/tesi-codice/errors-on-errors/top-combination/code3.0/gvm_toolkit.py:316: UserWarning: Negative eigenvalue -4.8319e-01 in systematic \"btag\"; adding 4.9319e-01 to diagonal for regularisation.\n",
       "  warnings.warn(\n",
-      "/Users/enzocanonero/Documents/PhD/tesi-codice/errors-on-errors/top-combination/code3.0/gvm_toolkit.py:276: UserWarning: Negative eigenvalue -3.6380e-01 in systematic \"LHCrad\"; adding 3.7380e-01 to diagonal for regularisation.\n",
+      "/Users/enzocanonero/Documents/PhD/tesi-codice/errors-on-errors/top-combination/code3.0/gvm_toolkit.py:316: UserWarning: Negative eigenvalue -3.6380e-01 in systematic \"LHCrad\"; adding 3.7380e-01 to diagonal for regularisation.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -228,7 +229,8 @@
     }
    ],
    "source": [
-    "comb_fict = GVMCombination('input_files/LHC_comb_fictitious_meas.yaml')\n",
+    "comb_fict = GVMCombination.from_yaml('input_files/LHC_comb_fictitious_meas.yaml')\n",
+    "comb_fict.fit()\n",
     "mu_hat = comb_fict.fit_results['mu']\n",
     "ci_low, ci_high, ci_half = comb_fict.confidence_interval()\n",
     "chi2 = comb_fict.goodness_of_fit()\n",
