--- a/tutorials/toy/tutorial.ipynb
+++ b/tutorials/toy/tutorial.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "151b1b6b",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "fce66e15",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,8 @@
     }
    ],
    "source": [
-    "comb = GVMCombination('input_files/diag_corr.yaml')\n",
+    "comb = GVMCombination.from_yaml('input_files/diag_corr.yaml')\n",
+    "comb.fit()\n",
     "mu_hat = comb.fit_results['mu']\n",
     "ci_low, ci_high, _ = comb.confidence_interval()\n",
     "chi_2 = comb.goodness_of_fit()\n",
@@ -103,7 +104,8 @@
     "print(f'mu_hat = {mu_hat:.4f}, CI = ({ci_low:.4f}, {ci_high:.4f})')\n",
     "print(f'χ² = {chi_2:.3f}, significance = {significance} \\n')\n",
     "\n",
-    "comb = GVMCombination('input_files/hybrid_corr.yaml')\n",
+    "comb = GVMCombination.from_yaml('input_files/hybrid_corr.yaml')\n",
+    "comb.fit()\n",
     "mu_hat = comb.fit_results['mu']\n",
     "ci_low, ci_high, _ = comb.confidence_interval()\n",
     "chi_2 = comb.goodness_of_fit()\n",
@@ -113,7 +115,8 @@
     "print(f'mu_hat = {mu_hat:.4f}, CI = ({ci_low:.4f}, {ci_high:.4f})')\n",
     "print(f'χ² = {chi_2:.3f}, significance = {significance} \\n')\n",
     "\n",
-    "comb = GVMCombination('input_files/full_corr.yaml')\n",
+    "comb = GVMCombination.from_yaml('input_files/full_corr.yaml')\n",
+    "comb.fit()\n",
     "mu_hat = comb.fit_results['mu']\n",
     "ci_low, ci_high, _ = comb.confidence_interval()\n",
     "chi_2 = comb.goodness_of_fit()\n",
@@ -137,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "aebc5e9e",
    "metadata": {},
    "outputs": [
@@ -151,7 +154,8 @@
     }
    ],
    "source": [
-    "comb = GVMCombination('input_files/stat_cov.yaml')\n",
+    "comb = GVMCombination.from_yaml('input_files/stat_cov.yaml')\n",
+    "comb.fit()\n",
     "mu_hat = comb.fit_results['mu']\n",
     "ci_low, ci_high, _ = comb.confidence_interval()\n",
     "chi_2 = comb.goodness_of_fit()\n",
@@ -173,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "14e3d3c8",
    "metadata": {},
    "outputs": [
@@ -186,7 +190,7 @@
     }
    ],
    "source": [
-    "comb = GVMCombination('input_files/diag_corr.yaml')\n",
+    "comb = GVMCombination.from_yaml('input_files/diag_corr.yaml')\n",
     "\n",
     "# extract current configuration\n",
     "info = comb.input_data()\n",
@@ -201,7 +205,7 @@
     "\n",
     "# apply modifications and refit\n",
     "comb.update_data(info)\n",
-    "comb.fit_results = comb.minimize()\n",
+    "comb.fit()\n",
     "print(f\"updated mu_hat={comb.fit_results['mu']:.4f}\")\n"
    ]
   },
@@ -241,13 +245,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "75da59e8",
    "metadata": {},
    "outputs": [],
    "source": [
     "eps_grid = np.linspace(0., 0.6, 14)\n",
-    "comb = GVMCombination('input_files/diag_corr.yaml')\n",
+    "comb = GVMCombination.from_yaml('input_files/diag_corr.yaml')\n",
     "\n",
     "base_info = comb.input_data()\n",
     "\n",
@@ -281,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7bfd803a",
    "metadata": {},
    "outputs": [
@@ -330,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a4d68f6c",
    "metadata": {},
    "outputs": [
@@ -384,13 +388,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "405446fd",
    "metadata": {},
    "outputs": [],
    "source": [
     "eps_grid = np.linspace(0., 0.6, 14)\n",
-    "comb = GVMCombination('input_files/diag_corr.yaml')\n",
+    "comb = GVMCombination.from_yaml('input_files/diag_corr.yaml')\n",
     "\n",
     "base_info = comb.input_data()\n",
     "cv = []\n",
@@ -426,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a59ddf68",
    "metadata": {},
    "outputs": [
@@ -475,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "f59eff03",
    "metadata": {
     "scrolled": false
@@ -531,13 +535,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "7f19905c",
    "metadata": {},
    "outputs": [],
    "source": [
     "eps_grid = np.linspace(0., 0.6, 14)\n",
-    "comb = GVMCombination('input_files/diag_corr.yaml')\n",
+    "comb = GVMCombination.from_yaml('input_files/diag_corr.yaml')\n",
     "\n",
     "base_info = comb.input_data()\n",
     "\n",
@@ -573,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "0c4b1480",
    "metadata": {
     "scrolled": false
@@ -624,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "f7403ab3",
    "metadata": {
     "scrolled": false
@@ -668,13 +672,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "6b611191",
    "metadata": {},
    "outputs": [],
    "source": [
     "eps_grid = np.linspace(0., 0.6, 14)\n",
-    "comb = GVMCombination('input_files/diag_corr.yaml')\n",
+    "comb = GVMCombination.from_yaml('input_files/diag_corr.yaml')\n",
     "\n",
     "base_info = comb.input_data()\n",
     "cv = []\n",
@@ -708,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "90226b32",
    "metadata": {},
    "outputs": [
@@ -757,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "ceafe709",
    "metadata": {},
    "outputs": [
@@ -807,13 +811,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "4ad23975",
    "metadata": {},
    "outputs": [],
    "source": [
     "eps_grid = np.linspace(0., 0.6, 14)\n",
-    "comb = GVMCombination('input_files/hybrid_corr.yaml')\n",
+    "comb = GVMCombination.from_yaml('input_files/hybrid_corr.yaml')\n",
     "\n",
     "base_info = comb.input_data()\n",
     "cv = []\n",
@@ -847,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "42822643",
    "metadata": {},
    "outputs": [
@@ -904,13 +908,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "95e4f39c",
    "metadata": {},
    "outputs": [],
    "source": [
     "eps_grid = np.linspace(0., 0.6, 14)\n",
-    "comb = GVMCombination('input_files/full_corr.yaml')\n",
+    "comb = GVMCombination.from_yaml('input_files/full_corr.yaml')\n",
     "\n",
     "base_info = comb.input_data()\n",
     "cv = []\n",
@@ -944,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "1ef3810d",
    "metadata": {},
    "outputs": [
